# switchdeck

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start  start.sh
.devcontainer/: Dockerfile  docker-compose.yml
.envs/: minio  postgres  rabbitmq
config/gunicorn/: gunicorn.conf.py
config/minio/: Dockerfile
config/nginx/: nginx.conf
config/traefik/: traefik.yaml
locale/ru_RU/LC_MESSAGES/: django.po
requirements/: _base.txt  production.txt  test.txt
switchdeck/: admin.py  api_router.py  api_urls.py  api_views.py  apps.py  celery.py  forms.py  models.py  profile_views.py  serializer.py  sitemaps.py  tests.py  token_generator.py  urls.py  views.py  wsgi.py
switchdeck/apps/account/: apps.py  forms.py  models.py  urls.py  views.py
switchdeck/apps/catalog_service/: __init__.py  admin.py  apps.py  models.py  tasks.py
switchdeck/apps/chat/: __init__.py  admin.py  apps.py  constants.py  managers.py  models.py
switchdeck/apps/core/: views.py
switchdeck/apps/game/: admin.py  apps.py  models.py  urls.py  views.py
switchdeck/migrations/: 0004_auto_20190903_1203.py  0007_auto_20190916_1020.py  0009_auto_20191101_1149.py
switchdeck/settings/: _base.py  dev.py  production.py
switchdeck/templates/: _base.html  index.html
switchdecksite/: settings.py  sitemaps.py  urls.py
switchdecksite/switchdeck/: admin.py  forms.py  models.py  profile_views.py  tests.py  urls.py  views.py
switchdecksite/switchdecksite/: settings.py  urls.py  wsgi.py
(+147 files in other folders)
