[tool.poetry]
name = "switchdeck"
version = "0.1.0"
description = "Python web application to change little carriges of one famous portable game console."
authors = ["Dzmitry Izaitka <dem214overlord@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dem214/switchdeck"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
beautifulsoup4 = "^4.11.1"
celery = "^5.2.7"
djangorestframework = "^3.13.1"
drf-spectacular = "^0.24.0"
Pillow = "^9.2.0"
psycopg2 = "^2.9.3"
PyJWT = "^2.4.0"
requests = "^2.28.1"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
pytest = "^7.1.3"
coverage = "^6.4.4"
django-heroku = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
